<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Scan"
            android:icon="@drawable/ic_qrcode_black_24dp"
            android:title="@string/Scan" />
        <item
            android:id="@+id/nav_Voti"
            android:icon="@drawable/ic_valutazioni"
            android:title="@string/Voti" />
        <item
            android:id="@+id/nav_assenze"
            android:icon="@drawable/ic_assenze"
            android:title="@string/Assenze" />
        <item
            android:id="@+id/nav_agenda"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/agenda" />
        <item
            android:id="@+id/nav_profilo"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/ModificaProfilo" />
    </group>


</menu>
